samples/_failures_safe/1761128275_0c8444_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3adf044f.c: In function ‘main’:
./samples/SAFE/__tmp_3adf044f.c:127:17: error: expected expression at end of input
  127 |                 for (
      |                 ^~~
./samples/SAFE/__tmp_3adf044f.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3adf044f.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3adf044f.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3adf044f.c:127:17: error: expected declaration or statement at end of input
